--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "generate:schema": "openapi-typescript src/api/messariOpenApi.yaml --output src/types/messari-schema.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -19,11 +20,14 @@
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.4",
     "deepmerge": "^4.2.2",
+    "framer-motion": "^5.0.0",
+    "lightweight-charts": "^3.6.1",
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.27.0"
+    "react-query": "^3.27.0",
+    "react-sizeme": "^3.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -37,6 +41,7 @@
     "eslint-config-prettier": "^8.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
+    "openapi-typescript": "^4.4.0",
     "react-test-renderer": "^17.0.2",
     "typescript": "4.4.4"
   }
