--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "generate:schema": "openapi-typescript src/api/messariOpenApi.yaml --output src/types/messari-schema.ts",
+    "generate:schema": "openapi-typescript https://data.messari.io/openapi.yaml --output src/types/messari-schema.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -19,15 +19,18 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.4",
+    "axios": "^0.24.0",
     "deepmerge": "^4.2.2",
-    "framer-motion": "^5.0.0",
     "lightweight-charts": "^3.6.1",
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.27.0",
-    "react-sizeme": "^3.0.2"
+    "react-sizeme": "^3.0.2",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -35,6 +38,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/lodash": "^4.14.176",
     "@types/react": "17.0.31",
+    "@types/react-window": "^1.8.5",
+    "@types/react-window-infinite-loader": "^1.0.5",
     "babel-jest": "^27.3.1",
     "eslint": "^8.0.1",
     "eslint-config-next": "11.1.2",
@@ -43,6 +48,7 @@
     "jest": "^27.3.1",
     "openapi-typescript": "^4.4.0",
     "react-test-renderer": "^17.0.2",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "typescript-axios": "^1.0.0"
   }
 }
