--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.4",
     "axios": "^0.24.0",
+    "date-fns": "^2.25.0",
     "deepmerge": "^4.2.2",
     "lightweight-charts": "^3.6.1",
     "lodash": "^4.17.21",
@@ -33,13 +34,17 @@
     "react-window-infinite-loader": "^1.0.7"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.176",
+    "@types/node": "^16.11.6",
     "@types/react": "17.0.31",
     "@types/react-window": "^1.8.5",
     "@types/react-window-infinite-loader": "^1.0.5",
+    "axios-mock-adapter": "^1.20.0",
     "babel-jest": "^27.3.1",
     "eslint": "^8.0.1",
     "eslint-config-next": "11.1.2",
